still trying to fix css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <hr id="grayLine">
 
             <!-- Image of Rob-->
-                <img id="robImage" src="./myportfolio/assets/images/rob-connolly.jpg" alt="rob connolly photo">
+                <img id="robImage" src="assets/images/rob-connolly.jpg" alt="rob connolly photo">
                 
                     <p>Welcome to my portfolio page. I would like to first thank you for taking the time to learn more about who I am. I love to build and scale companies. I have founded two previous companies, one was recently acquired. I am very fourtante to have had the opportunity to learn from my previous failures and successes.
                     </p>
