--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <div id="menu">
 
                 <span>
-                    <a href="myportfolio/index.html">About</a>
+                    <a href="index.html">About</a>
                 </span>
 
                 <span>
-                    <a href="myportfolio/portfolio.html"> Portfolio</a>
+                    <a href="./portfolio.html"> Portfolio</a>
                 </span>
 
                 <span>
-                    <a href="myportfolio/contact.html">Contact</a>
+                    <a href="./contact.html">Contact</a>
                 </span>
 
             </div>
