update: images, css, and new files

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <hr id="grayLine">
 
             <!-- Image of Rob-->
-            <div id=aboutMeSection">
+            <div id="aboutMeSection">
             <img id="robImage" src="assets/images/rob-connolly.jpg" alt="rob connolly photo">
 
             <p>Welcome to my portfolio page. I would like to first thank you for taking the time to learn more about who
