--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="menu">
 
                 <span>
-                    <a href=".index.html">About</a>
+                    <a href="./index.html">About</a>
                 </span>
 
                 <span>
