master link fix

--- a/contact.html
+++ b/contact.html
@@ -22,17 +22,18 @@
         <!-- Header-->
     <div id="menu">
             
-        <span>
-            <a href="myportfolio/index.html">About</a>
-        </span>
+            <span>
+                    <a href="./index.html">About</a>
+                </span>
 
-        <span>
-            <a href="myportfolio/portfolio.html"> Portfolio</a>
-        </span>
+                <span>
+                    <a href="./portfolio.html"> Portfolio</a>
+                </span>
 
-        <span>
-            <a href="myportfolio/contact.html">Contact</a>
-        </span>
+                <span>
+                    <a href="./contact.html">Contact</a>
+                </span>
+
         
     </div>
 </div>
