testing background image path

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
         <!-- Wrap2 wraps about me section-->
 
-        <div id="wrap2">
+        <div class="contentBox">
 
             <!-- About Me Heading-->
-            <h2 id="aboutMeHeading">
+            <h2 class="contentHeading">
                 About Me
             </h2>
-            <!-- gray line in about me section-->
-            <hr id="grayLine">
+            <!-- gray line in content section-->
+            <hr class="grayLine">
 
             <!-- Image of Rob-->
             <div id="aboutMeSection">
