background image hangman

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,10 +59,17 @@
             <!-- Portfolio Form-->
 
 
+          
+            <ul id="boxList">
+                <li id="boxTitleHangman">Hangman</li>
+                <li id="boxTitleTrivia">Trivia</li>
+                <li id="boxTitleRock">Rock</li>
+                <li id="boxTitleRpg">Rpg</li>
+                <li id="boxTitleRutgers">Rutgets</li>
+                </ul>
 
-            <div id="row1"></div>
-
-            <div id="hangman">
+            <!-- 
+                <div id="hangman">
                 <div id="hangmanBackground" style="background-image: url('assets/images/hangman.jpg');">
                     <p class="portfolioTitle">Hangman</p>
                 </div>
@@ -92,9 +99,10 @@
                         </div>
 
                     </div>
-
-
                 </div>
+
+                </div> -->
+
                 <!-- Start of footer-->
                 <div id="footerBox">
                     <!-- Text for footer-->
